[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "XiocaAPI"
version = "0.2.0"
authors = [
  { name="shashachkaaa", email="sasaxtwink@gmail.com" },
]
description = "Асинхронный и синхронный клиент для Xioca API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.20.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/shashachkaaa/xiocaapi"
"Bug Tracker" = "https://github.com/shashachkaaa/xiocaapi/issues"